--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.0"
+    "axios": "^0.27.0",
+    "bottleneck": "^2.19.5"
   }
 }
